--- a/backend/src/SentinelKnowledgebase.Domain/SentinelKnowledgebase.Domain.csproj
+++ b/backend/src/SentinelKnowledgebase.Domain/SentinelKnowledgebase.Domain.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Pgvector" Version="0.3.2" />
+  </ItemGroup>
+
 </Project>
