fix(api): address critical and warning issues from code review

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,10 @@ POSTGRES_DB=sentinel_knowledgebase
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
+# Sentinel API Authentication
+# Set this key in your browser extension settings
+SENTINEL_API_KEY=your-secure-api-key-here
+
 # OpenAI
 OPENAI_API_KEY=your-api-key-here
 
