--- a/backend/src/SentinelKnowledgebase.Api/appsettings.json
+++ b/backend/src/SentinelKnowledgebase.Api/appsettings.json
@@ -9,6 +9,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=sentinel_knowledgebase;Username=postgres;Password=postgres"
   },
+  "ApiKey": "${SENTINEL_API_KEY}",
   "OpenAI": {
     "ApiKey": "",
     "Model": "gpt-4",
