feat(extension): add webpage capture functionality
Implement bookmark-triggered webpage capture feature:
- Add bookmarks, notifications, scripting, contextMenus permissions
- Listen for chrome.bookmarks.onCreated events
- Show confirmation notification before capture
- Context menu for saving selected text
- Content extraction from webpages (title, author, content)
- Add settings for enable/disable and auto-confirm
- API endpoint for /api/v1/capture/webpage

Co-authored-by: Kilo Code <moonshotai/kimi-k2.5:free>

--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -2,16 +2,21 @@
   "manifest_version": 3,
   "name": "Sentinel Knowledge Collector",
   "version": "1.0.0",
-  "description": "Capture high-signal content from X (Twitter) to your Sentinel knowledge base",
+  "description": "Capture high-signal content from X (Twitter) and web pages to your Sentinel knowledge base",
   "permissions": [
     "storage",
-    "activeTab"
+    "activeTab",
+    "bookmarks",
+    "notifications",
+    "scripting",
+    "contextMenus"
   ],
   "host_permissions": [
     "https://x.com/*",
-    "https://twitter.com/*"
+    "https://twitter.com/*",
+    "<all_urls>"
   ],
-  "content_scripts": [
+"content_scripts": [
     {
       "matches": [
         "https://x.com/*",
@@ -22,6 +27,15 @@
       ],
       "css": [
         "dist/content.css"
+      ],
+      "run_at": "document_idle"
+    },
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "dist/webpage-content.js"
       ],
       "run_at": "document_idle"
     }
