--- a/browser-extension/package.json
+++ b/browser-extension/package.json
@@ -6,11 +6,22 @@
     "build": "tsc && npm run copy-assets",
     "copy-assets": "copy src\\content.css dist\\content.css",
     "watch": "tsc --watch",
-    "clean": "rmdir /s /q dist 2>nul || exit 0"
+    "clean": "rmdir /s /q dist 2>nul || exit 0",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:all": "npm run build && npm run test && npm run test:e2e"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@types/chrome": "^0.0.254",
-    "typescript": "^5.3.3"
+    "@vitest/coverage-v8": "^4.0.18",
+    "happy-dom": "^20.6.3",
+    "jsdom": "^28.1.0",
+    "typescript": "^5.3.3",
+    "vitest": "^4.0.18"
   },
   "keywords": [
     "browser-extension",
