test(extension): add E2E tests with Playwright
Phase 4 of test suite implementation:
- Add playwright.config.ts for E2E test configuration
- Create tests/e2e/fixtures/extension.ts with Playwright fixtures
- Create tests/e2e/fixtures/tweet-mock.html with mock X.com tweet DOM
- Create tests/e2e/fixtures/webpage-mock.html with mock article page
- Create tests/e2e/extension-load.test.ts with 7 tests:
  - Extension Build Verification (dist files, manifest validation)
  - Options Page (form elements)
  - Background Script (message handlers)
  - Content Script (extraction logic)
  - Mock Fixtures (tweet/webpage HTML validation)
- Add http-server for serving mock fixtures
- Add 'type': 'module' to package.json for ESM support

All 7 E2E tests pass.

Co-authored-by: Kilo Code <moonshotai/kimi-k2.5:free>

--- a/browser-extension/package.json
+++ b/browser-extension/package.json
@@ -1,6 +1,7 @@
 {
   "name": "sentinel-browser-extension",
   "version": "1.0.0",
+  "type": "module",
   "description": "Sentinel Knowledge Collector - Browser extension for capturing X (Twitter) content",
   "scripts": {
     "build": "tsc && npm run copy-assets",
@@ -19,6 +20,7 @@
     "@types/chrome": "^0.0.254",
     "@vitest/coverage-v8": "^4.0.18",
     "happy-dom": "^20.6.3",
+    "http-server": "^14.1.1",
     "jsdom": "^28.1.0",
     "typescript": "^5.3.3",
     "vitest": "^4.0.18"
