feat(backend): configure openai api urls from configuration settings
Co-authored-by: Antigravity <antigravity-ai>

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-.NET SDK=8.0
+.NET SDK=10.0
 
 # Database
 POSTGRES_HOST=localhost
@@ -9,6 +9,8 @@ POSTGRES_PASSWORD=postgres
 
 # OpenAI
 OPENAI_API_KEY=your-api-key-here
+OPENAI_EMBEDDINGS_URL=https://api.openai.com/v1/embeddings
+OPENAI_CHAT_COMPLETIONS_URL=https://api.openai.com/v1/chat/completions
 
 # Vector size
 VECTOR_SIZE=1536
