--- a/backend/src/SentinelKnowledgebase.Api/appsettings.json
+++ b/backend/src/SentinelKnowledgebase.Api/appsettings.json
@@ -42,7 +42,9 @@
   "OpenAI": {
     "ApiKey": "",
     "Model": "gpt-4",
-    "EmbeddingModel": "text-embedding-3-small"
+    "EmbeddingModel": "text-embedding-3-small",
+    "EmbeddingsUrl": "https://api.openai.com/v1/embeddings",
+    "ChatCompletionsUrl": "https://api.openai.com/v1/chat/completions"
   },
   "VectorSize": 1536
 }
