feat(docker): optimize backend docker deployment
- move Dockerfile to backend root for better multi-project context
- upgrade to .NET 10.0 SDK and Runtime images
- optimize Docker layers for faster builds
- update docker-compose.yml to use corrected context

Co-authored-by: Antigravity <antigravity-ai>

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -21,7 +21,7 @@ services:
 
   api:
     build:
-      context: ./src/SentinelKnowledgebase.Api
+      context: .
       dockerfile: Dockerfile
     container_name: sentinel-api
     environment:
