refactor(frontend): cross-platform build and assets management
- replace windows-specific shell commands with cross-platform node scripts
- add scripted asset copying for manifest, html, and icons
- add manifest existence verification before browser launch
- improve build.ps1 synchronization for frontend builds

Co-authored-by: Antigravity <antigravity-ai>

--- a/browser-extension/package.json
+++ b/browser-extension/package.json
@@ -5,9 +5,9 @@
   "description": "Sentinel Knowledge Collector - Browser extension for capturing X (Twitter) content",
   "scripts": {
     "build": "tsc && npm run copy-assets",
-    "copy-assets": "copy src\\content.css dist\\content.css",
+    "copy-assets": "node scripts/copy-assets.js",
     "watch": "tsc --watch",
-    "clean": "rmdir /s /q dist 2>nul || exit 0",
+    "clean": "node scripts/clean.js",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
