fix(frontend): correctly load browser extension scripts
- remove dist/ prefix from manifest.json paths
- add type='module' to popup.html and options.html script tags

Co-authored-by: Antigravity <antigravity-ai>

--- a/browser-extension/manifest.json
+++ b/browser-extension/manifest.json
@@ -23,10 +23,10 @@
         "https://twitter.com/*"
       ],
       "js": [
-        "dist/content.js"
+        "content.js"
       ],
       "css": [
-        "dist/content.css"
+        "content.css"
       ],
       "run_at": "document_idle"
     },
@@ -35,13 +35,13 @@
         "<all_urls>"
       ],
       "js": [
-        "dist/webpage-content.js"
+        "webpage-content.js"
       ],
       "run_at": "document_idle"
     }
   ],
   "background": {
-    "service_worker": "dist/background.js",
+    "service_worker": "background.js",
     "type": "module"
   },
   "options_page": "options.html",
