feat(frontend): Add Angular frontend
- Initialized Angular shell with modern zoneless change detection
- Implemented Signal-based AuthService and Dashboard/Tags components
- Added feature specification and design documentation
- Added large hero search bar with Signal-based filtering
- Implemented comprehensive Playwright E2E test suite
- Updated feature specification and implementation docs
- Implemented backend mocking in Playwright E2E tests

Co-authored-by: Antigravity <Cerebras-Llama-3.1-70B>

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,9 @@ Thumbs.db
 coverage/
 *.trx
 *.coverage
+.playwright-user-data
+test-results
+playwright-report
 
 # SQL Server
 *.mdf
@@ -53,3 +56,4 @@ coverage/
 
 # git AI
 prompts.db
+
